[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "nixt"
description = "NIXT"
version = "40"
authors = [
    {name = "Bart Thate", email = "rssbotd@gmail.com"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]

[project.script]
"nixt" = "nixt.__main__:wrapped"
"nixtc" = "nixt.console:wraps"
"nixtd" = "nixt.daemon:wrapping"
"nixts" = "nixt.service:wrapper"

[project.urls]
"home" = "https://pypi.org/project/nixt"
"bugs" = "https://github.com/rssbotd/nixt/issues"
"source" = "https://github.com/rssbotd/nixt"


[tools.setuptools]
packages = [
    'nixt',
    'nixt.mods',
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/nixt" = [
    "README.rst",
]

[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
